# macsweep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-target.md
.github/workflows/: ci.yml
contributions/: cli_json_output_for_scan_repor.py
docs/: icon.icns
docs/launch/: homebrew.md  posts.md  seed-issues.sh
maccleaner/: __main__.py  composition.py
maccleaner/application/: app_service.py  clean.py  ports.py  scan.py
maccleaner/domain/: entities.py  policies.py
maccleaner/infrastructure/: fs_adapter.py  macos_targets.py  trash.py
maccleaner/presentation/: cli.py
maccleaner/presentation/gui/: app.py  main_window.py  workers.py
macsweep/: composition.py
macsweep/application/: app_service.py  ports.py  scan.py
macsweep/domain/: entities.py
macsweep/infrastructure/: fs_adapter.py  macos_insights.py  macos_targets.py
macsweep/presentation/: cli.py
macsweep/presentation/gui/: app.py  main_window.py  workers.py
tests/: test_cli.py  test_insights.py  test_safety.py
