[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "macsweep"
version = "0.2.1"
description = "Safe, whitelist-only storage cleaner for macOS — never touches system files, apps, or your documents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sami Mohamed" }]
requires-python = ">=3.9"
keywords = ["macos", "cleaner", "disk-space", "cache", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
gui = ["PySide6-Essentials>=6.6"]
dev = ["pytest>=7"]

[project.scripts]
macsweep = "macsweep.presentation.cli:main"

[project.urls]
Homepage = "https://github.com/samimohameed/macsweep"
Issues = "https://github.com/samimohameed/macsweep/issues"

[tool.setuptools.packages.find]
include = ["macsweep*"]

[tool.setuptools.package-data]
"macsweep.presentation.gui" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
